--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -1,11 +1,11 @@
-name: Gitee repos mirror periodic job
+name: Get all repo name
 
 on:
   pull_request:
     branches: [ master ]
   schedule:
     # Runs at 01:00 UTC (9:00 AM Beijing) every day
-    - cron:  '30 1 * * *'
+    - cron:  '35 1 * * *'
 
 jobs:
   build:
