--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
   schedule:
     # Runs at 01:00 UTC (9:00 AM Beijing) every day
-    - cron:  '10 2 * * *'
+    - cron:  '45 2 * * *'
 
 jobs:
   build:
@@ -23,7 +23,7 @@ jobs:
           core.setOutput('key', `${context.repo.owner}-${context.repo.repo}`);
           return context.repo.repo;
     - name: Echo repo lists
-      uses: action/github-script@v3.1
+      uses: actions/github-script@v3.1
     - run: |
           echo: '${{ steps.info.outputs.result }}'
         
