--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -24,6 +24,7 @@ jobs:
           return context.repo.repo;
     - run: |
         echo '${{ steps.info.outputs.result }}'
+        echo '${{ context.repo.repo }}'
 #     - name: Echo repo lists
 #       uses: ossf/scorecard-action@e38b1902ae4f44df626f11ba0734b14fb91f8f86 # v2.1.2
 #       with:
