--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
   schedule:
     # Runs at 01:00 UTC (9:00 AM Beijing) every day
-    - cron:  '35 3 * * *'
+    - cron:  '30 7 * * *'
 
 jobs:
   build:
@@ -19,7 +19,7 @@ jobs:
       with:
         result-encoding: string
         script: |
-          console.log(context)
+          console.log(context.payload)
           core.setOutput('time', new Date(Date.now()).toISOString().replace(/[^0-9]/g, ""));
           core.setOutput('key', `${context.repo.owner}-${context.repo.repo}`);
           return context.repo.repo;
