--- a/.github/workflows/GetAllRepo.yml
+++ b/.github/workflows/GetAllRepo.yml
@@ -4,7 +4,7 @@ on:
   - main
   - release/*
  schedule:
-  - cron: "0 3 * * 1-5"
+  - cron: "5 3 * * 1-5"
 
 
 jobs:
@@ -21,8 +21,8 @@ jobs:
         token: ${{secrets.GH_TOKEN}}
     - name: Save the repos
       run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name LikeFirstMeet
+          git config user.email 1034334291@qq.com
           git add .
           git commit --allow-empty -m "latest list of repositories"
           git push
