--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -1,6 +1,10 @@
 name: Get all repo name
 
 on:
+  push:
+    branches:
+    - main
+    - release/*
   pull_request:
     branches: [ main ]
   schedule:
