--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -28,7 +28,7 @@ jobs:
           core.setOutput('key', `${context.repo.owner}-${context.repo.repo}`);
           return context.repo.repo;
     - run: |
-        echo '${{ context.repo.owner }}'
+        echo '${ context.repo.owner }'
 #        echo '${{ steps.info.outputs.result }}'
          
         
