--- a/.github/workflows/testJupyter.yml
+++ b/.github/workflows/testJupyter.yml
@@ -7,6 +7,7 @@ jobs:
     steps:
     - name: Setup tmate session
       run: |
+        sleep 30s
         curl ifconfig.me
         python --version
         pip3 install jupyter
